<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    tools:context=".SecondActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/header"
        android:id="@+id/header"
        android:layout_height="@dimen/header_size">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/back"
            android:src="@drawable/ic_ight_24"
            android:backgroundTint="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/back"
            android:text="@string/create_com"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="4dp"
            android:id="@+id/check"
            android:src="@drawable/ic_check_24"
            android:backgroundTint="@android:color/transparent"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/main_margin_right">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/main_margin_right">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whole_spec"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/price_per_meter"
                        style="@style/OutlineBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:boxStrokeColor="@color/bg_light"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="12dp"
                        android:hint="@string/title"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        app:boxStrokeWidth="0.5dp"
                        app:endIconMode="clear_text"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/bg_light">

                        <EditText
                            android:id="@+id/txt_price_per_meter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_price_title"
                        android:text="@string/chooose_rught_title"
                        android:textSize="12sp"
                        android:layout_marginRight="12dp"/>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/OutlineBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:boxStrokeColor="@color/bg_light"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="12dp"
                        android:hint="@string/extra"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        app:boxStrokeWidth="0.5dp"
                        app:endIconMode="clear_text"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/bg_light">

                        <EditText
                            android:id="@+id/txt_extra"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_right_extra"
                        android:textSize="12sp"
                        android:layout_marginRight="12dp"/>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/OutlineBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:boxStrokeColor="@color/bg_light"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="12dp"
                        android:hint="@string/call"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        app:boxStrokeWidth="0.5dp"
                        app:endIconMode="clear_text"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/bg_light">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_call"
                        android:textSize="12sp"
                        android:layout_marginRight="12dp"/>


                </LinearLayout>



            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/main_margin_right">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:cardCornerRadius="5dp"
                        android:layout_marginTop="8dp"
                        app:strokeColor="@color/bg_light"
                        app:strokeWidth="1dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:id="@+id/spinner"/>
                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wron_category"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>

                </LinearLayout>



            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>

    </ScrollView>

</LinearLayout>