<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_light"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/header"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header"
        android:layout_height="@dimen/header_size">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/back"
            android:src="@drawable/ic_ight_24"
            android:backgroundTint="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/back"
            android:text="@string/com_detail"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:id="@+id/top_panel"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/top_image"
            android:scaleType="fitXY"
            android:src="@drawable/furniture"
            android:layout_alignParentTop="true"/>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="40dp"
            app:maxImageSize="48dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_favorite_24"
            android:backgroundTint="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/float_left_main" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/top_image"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_crop_free_24"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/image_magnify"/>
    </RelativeLayout>]

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:id="@+id/price_panel"
        android:layout_marginRight="@dimen/main_margin_right"
        android:layout_marginLeft="@dimen/main_margin_right"
        app:layout_constraintTop_toBottomOf="@+id/top_panel"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="قیمت پایه:"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:layout_marginRight="4dp"
                android:text="3,500,000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="تومان"
                android:layout_marginRight="4dp"
                android:textSize="12sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="قیمت آخر:"
                android:textSize="10sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@android:color/holo_green_dark"
                android:layout_marginRight="4dp"
                android:text="2,500,000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="تومان"
                android:layout_marginRight="4dp"
                android:textSize="8sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/chip_layout"
        android:layout_marginRight="@dimen/main_chip_magin"
        android:layout_marginLeft="@dimen/main_chip_magin"
        app:layout_constraintTop_toBottomOf="@+id/price_panel"
        android:layout_marginTop="12dp">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layoutDirection="rtl">
                <com.google.android.material.chip.Chip
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="اصفهان"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"/>


                <com.google.android.material.chip.Chip
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="لوازم خانگی"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_red_dark"/>


                <com.google.android.material.chip.Chip
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="آگهی عادی"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_orange_dark"/>

            </LinearLayout>
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/chip_layout"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_margin_right"
            android:layout_marginLeft="@dimen/main_margin_right"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="100dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/main_margin_right"
                    android:layout_marginRight="@dimen/main_margin_right"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="مبل راحتی مدل چستر"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="gravity"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:justificationMode="inter_word"
                        android:text=" سمینتب نمشستینم تشسیت نشمتسی بنمشتسنمیب تشنمسیت بنمشتب نمشتسنیم تبشنسب تشنمستیب نمتشسبن شسنم بتشمسنتب نمشتسی نمبت شسنمبت شنستبتن شسمتنی بشنسمبت شمنسیبت نمشستبمنشستب نمشستب نمستشبنمتسب
سمنیبتنمش تبسمکشینبمش نسکبمشسنیبکم نشسکمیبن شسکمبن شسمکبن شسمکنیب مکشسنبمک نشسبن شسبنمک "
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"

            android:textColor="@color/abc_background_cache_hint_selector_material_dark"
            android:text="@string/show_caller"
            android:id="@+id/btn_show_contact"
            tools:ignore="HardcodedText" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/header"
            android:layout_marginRight="8dp"
            android:text="@string/call_seller"
            android:id="@+id/btn_contact"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>